# todolister

./: .env  Cargo.toml  diesel.toml
migrations/2024-10-19-134102_users_and_tasks/: up.sql
migrations/2024-10-21-163424_create_sessions/: down.sql  up.sql
migrations/2024-10-21-164757_session_userId/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/controllers/: task_controller.rs
src/models/: app_state.rs  mod.rs  response.rs  session.rs  task.rs  user.rs
src/repositories/: task_repository.rs
src/services/: task_service.rs
