[package]
name = "todolister"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"]}
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
postgres = { version = "*", features = ["with-uuid-1"]}
dotenvy = "0.15"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde"]}
sha2 = { version = "0.10.8" }
