[package]
name = "todolister"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"]}
tower-sessions = { version = "0.13.0" }
tower-sessions-sqlx-store = { version = "0.14.1" }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
postgres = { version = "0.19.9", features = ["with-uuid-1"]}
dotenvy = "0.15"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.132"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde"]}
sha2 = { version = "0.10.8" }
